language-server/src/tests/snapshots/gleam_language_server__tests__completion__argument_variable_shadowing.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main(x: Int) {\n  let x = [1, 2]\n\n}\n"
---

pub fn main(x: Int) {
  let x = [1, 2]
|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn(Int) -> List(Int)
  sort:   3_main
  desc:   app
  edits:
    [3:0-3:0]: "main"
x
  kind:   Variable
  detail: List(Int)
  sort:   3_x
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "x"
