language-server/src/tests/snapshots/gleam_language_server__tests__completion__autocomplete_doesnt_delete_the_piece_of_code_that_comes_after_2.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport list\npub fn main(x: Int) {\n  list.mlist.filter([1, 2, 3], todo)\n}\n"
---

import list
pub fn main(x: Int) {
  list.m|list.filter([1, 2, 3], todo)
}


----- After applying completion -----

import list
pub fn main(x: Int) {
  list.maplist.filter([1, 2, 3], todo)
}
