language-server/src/tests/snapshots/gleam_language_server__tests__completion__case_subject.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main(something: Bool) {\n  case so\n}\n"
---

pub fn main(something: Bool) {
  case so|
}


----- After applying completion -----

pub fn main(something: Bool) {
  case something
}
