language-server/src/tests/snapshots/gleam_language_server__tests__completion__complete_echo_keyword.snap
---
source: language-server/src/tests/completion.rs
expression: "pub fn main() { e wibble }"
---
pub fn main() { e| wibble }


----- After applying completion -----
pub fn main() { echo wibble }
