language-server/src/tests/snapshots/gleam_language_server__tests__completion__complete_keyword_being_typed.snap
---
source: language-server/src/tests/completion.rs
expression: "pub fn main() { t }"
---
pub fn main() { t| }


----- After applying completion -----
pub fn main() { todo }
