language-server/src/tests/snapshots/gleam_language_server__tests__completion__complete_panic_keyword.snap
---
source: language-server/src/tests/completion.rs
expression: "pub fn main() { wibble(p) }"
---
pub fn main() { wibble(p|) }


----- After applying completion -----
pub fn main() { wibble(panic) }
