language-server/src/tests/snapshots/gleam_language_server__tests__completion__completion_for_partially_correct_existing_module_select.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport gleam/list\n\npub fn new() {\n  list.fer\n//      ^ cursor right after the 'f'\n}\n"
---

import gleam/list

pub fn new() {
  list.f|er
//      ^ cursor right after the 'f'
}


----- Completion content -----
list.filter
  kind:   Function
  detail: fn() -> a
  sort:   4_list.filter
  desc:   app
  edits:
    [4:2-4:10]: "list.filter"
